@@ -1,3 +1,12 @@
+2008-02-17 01:07-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormInternalViewEditor.m
+	* GormCore/GormScrollViewEditor.m
+	* GormCore/GormSplitViewEditor.m
+	* GormCore/GormViewEditor.m
+	* GormCore/GormViewWithContentViewEditor.m: Corrections for bug#18171.
+	Fixes issues with grouping and ungrouping.
+
 2008-02-16 20:54-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/2Controls/GormSliderAttributesInspector.m: Cleaned up
